--- a/CreateTypeGoedkeuringOntology.ipynb
+++ b/CreateTypeGoedkeuringOntology.ipynb
@@ -483,7 +483,21 @@
     "            f.write(opd+'\\n')\n",
     "            f.write(opr+'\\n')\n",
     "            j=j+1\n",
-    "f.close()\n"
+    "\n",
+    "#maak ObjectProperty onderdeelVan aan onder topObjectProperty\n",            
+    "opuri = '<http://www.me-ds.nl/voc/voertuig#onderdeelVan>' \n", 
+    "f.write(opuri + objpropPO + '\n')\n",
+    "f.write(opuri + subobjpropPO + '\n')\n",
+    "#maak API's onderdeel van EEG Voertuigtypegoedkeuring via objectproperty onderdeelVan domain en range\n",
+    "for val in i_lst:\n",
+    "            cluri = '<http://www.me-ds.nl/voc/voertuig#t' + str(val) + '>'\n",
+    "            rturi = '<http://www.me-ds.nl/voc/voertuig#t' + str(i_root) + '>'\n",
+    "            opr = opuri + ' <http://www.w3.org/2000/01/rdf-schema#range> ' + cluri + ' .'\n",
+    "            opd = opuri + ' <http://www.w3.org/2000/01/rdf-schema#domain> ' + rturi + ' .'\n",
+    "            f.write(opd+'\n')\n",
+    "            f.write(opr+'\n')\n",
+    "\n",
+    "f.close()\n",
    ]
   },
   {
